--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
 jobs:
-  CI Job:
+  CI-Job:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
