--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,8 +24,11 @@ jobs:
           else
           echo "Image with a tag $local_version already exists."
           fi
-      - name: Docker login
+      - name: Build Docker image
         if: ${{ env.NEW_BUILD_VERSION }}
         run: |
           echo ${{ secrets.docker_password }} | docker login --username ${{ secrets.docker_username }} --password-stdin
+          echo "Creating new image..."
+          docker build -t milenibgd/exemplify-ci-cd:${{ env.NEW_BUILD_VERSION }}
+          docker push milenibgd/exemplify-ci-cd:${{ env.NEW_BUILD_VERSION }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
