--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,9 +38,13 @@ jobs:
           docker build -t milenibgd/exemplify-ci-cd:${{ env.NEW_BUILD_VERSION }} .
           docker push milenibgd/exemplify-ci-cd:${{ env.NEW_BUILD_VERSION }}
       - name: Update deployment.yaml
+        if: ${{ env.NEW_BUILD_VERSION }}
         run: |
-          sed -i 's/image:.*/image: milenibgd\/exemplify-ci-cd:${{ env.NEW_BUILD_VERSION }}/' deployconfig/deployment.yaml
+          sed 's/image:.*/image: milenibgd\/exemplify-ci-cd:${{ env.NEW_BUILD_VERSION }}/' deployconfig/deployment.yaml > deployconfig/deployment.yaml.tmp
+          mv deployconfig/deployment.yaml.tmp deployconfig/deployment.yaml
           git add deployconfig/deployment.yaml
+          git config --global user.email "milenibgd@gmail.com"
+          git config --global user.name "milenovic91"
           git commit -m "update deploy image to ${{ env.NEW_BUILD_VERSION }}"
           git push
       - run: echo "🍏 This job's status is ${{ job.status }}."
